# imgdup

./: .gitignore  AUTHORS  Makefile.am  configure.ac
src/: .gitignore  Makefile.am  engine.c  engine.h  hash.cpp  hash.h  main.c  phash.cpp  phash.h  result.c  result.h
